Entrega 2/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM createProcDir ID addProcDir SEMICOLON a b bloque END
Rule 2     createProcDir -> <empty>
Rule 3     addProcDir -> <empty>
Rule 4     a -> variable
Rule 5     a -> <empty>
Rule 6     b -> funcion b
Rule 7     b -> <empty>
Rule 8     bloque -> LCURLY c RCURLY
Rule 9     c -> estatuto c
Rule 10    c -> <empty>
Rule 11    tipo -> INTTYPE
Rule 12    tipo -> FLOATTYPE
Rule 13    tipo -> CHARTYPE
Rule 14    tipo -> BOOLTYPE
Rule 15    tipo -> STRINGTYPE
Rule 16    estatuto -> asignacion
Rule 17    estatuto -> condicion
Rule 18    estatuto -> escritura
Rule 19    estatuto -> ciclo
Rule 20    variable -> VAR createVarDir d
Rule 21    createVarDir -> <empty>
Rule 22    d -> e COLON tipo addType SEMICOLON f
Rule 23    addType -> <empty>
Rule 24    e -> ID addVarDir
Rule 25    e -> ID addVarDir LBRACKET RBRACKET COMA e
Rule 26    e -> ID addVarDir LBRACKET RBRACKET
Rule 27    e -> ID addVarDir COMA e
Rule 28    addVarDir -> <empty>
Rule 29    f -> d
Rule 30    f -> <empty>
Rule 31    asignacion -> ID g
Rule 32    g -> ASSIGN expresion SEMICOLON
Rule 33    g -> LBRACKET RBRACKET ASSIGN LBRACKET h RBRACKET SEMICOLON
Rule 34    h -> expresion
Rule 35    h -> expresion COMA h
Rule 36    exp -> termino i
Rule 37    i -> j
Rule 38    i -> <empty>
Rule 39    j -> ADDITION exp
Rule 40    j -> SUBTRACTION exp
Rule 41    termino -> factor k
Rule 42    k -> l
Rule 43    k -> <empty>
Rule 44    l -> MULTIPLICATION termino
Rule 45    l -> DIVISION termino
Rule 46    factor -> m
Rule 47    factor -> n
Rule 48    m -> varcte
Rule 49    n -> LPARENTHESIS expresion RPARENTHESIS
Rule 50    expresion -> exp o
Rule 51    o -> LESS exp
Rule 52    o -> GREATER exp
Rule 53    o -> LESSEQUAL exp
Rule 54    o -> GREATEREQUAL exp
Rule 55    o -> NOTEQUAL exp
Rule 56    o -> EQUAL exp
Rule 57    o -> <empty>
Rule 58    varcte -> p
Rule 59    p -> ID q
Rule 60    p -> INT
Rule 61    p -> FLOAT
Rule 62    p -> CHAR
Rule 63    p -> STRING
Rule 64    p -> BOOL
Rule 65    q -> LBRACKET RBRACKET
Rule 66    q -> <empty>
Rule 67    condicion -> IF LPARENTHESIS expresion RPARENTHESIS bloque r
Rule 68    r -> ELSE bloque
Rule 69    r -> <empty>
Rule 70    escritura -> PRINT LPARENTHESIS s RPARENTHESIS SEMICOLON
Rule 71    s -> expresion
Rule 72    s -> QUOTE CTESTRING QUOTE
Rule 73    ciclo -> WHILE LPARENTHESIS expresion RPARENTHESIS bloque
Rule 74    funcion -> tipo FUNC ID addProcDirFunc LPARENTHESIS t RPARENTHESIS bloque
Rule 75    addProcDirFunc -> <empty>
Rule 76    t -> argumentos
Rule 77    t -> <empty>
Rule 78    argumentos -> u
Rule 79    u -> ID addVarDirFunc tipo addTypeFunc
Rule 80    u -> ID addVarDirFunc tipo addTypeFunc COMA u
Rule 81    addVarDirFunc -> <empty>
Rule 82    addTypeFunc -> <empty>

Terminals, with rules where they appear

ADDITION             : 39
ASSIGN               : 32 33
BOOL                 : 64
BOOLTYPE             : 14
CHAR                 : 62
CHARTYPE             : 13
COLON                : 22
COMA                 : 25 27 35 80
CTESTRING            : 72
DIVISION             : 45
ELSE                 : 68
END                  : 1
EQUAL                : 56
FLOAT                : 61
FLOATTYPE            : 12
FUNC                 : 74
GREATER              : 52
GREATEREQUAL         : 54
ID                   : 1 24 25 26 27 31 59 74 79 80
IF                   : 67
INT                  : 60
INTTYPE              : 11
LBRACKET             : 25 26 33 33 65
LCURLY               : 8
LESS                 : 51
LESSEQUAL            : 53
LPARENTHESIS         : 49 67 70 73 74
MULTIPLICATION       : 44
NOTEQUAL             : 55
PRINT                : 70
PROGRAM              : 1
QUOTE                : 72 72
RBRACKET             : 25 26 33 33 65
RCURLY               : 8
RPARENTHESIS         : 49 67 70 73 74
SEMICOLON            : 1 22 32 33 70
STRING               : 63
STRINGTYPE           : 15
SUBTRACTION          : 40
VAR                  : 20
WHILE                : 73
error                : 

Nonterminals, with rules where they appear

a                    : 1
addProcDir           : 1
addProcDirFunc       : 74
addType              : 22
addTypeFunc          : 79 80
addVarDir            : 24 25 26 27
addVarDirFunc        : 79 80
argumentos           : 76
asignacion           : 16
b                    : 1 6
bloque               : 1 67 68 73 74
c                    : 8 9
ciclo                : 19
condicion            : 17
createProcDir        : 1
createVarDir         : 20
d                    : 20 29
e                    : 22 25 27
escritura            : 18
estatuto             : 9
exp                  : 39 40 50 51 52 53 54 55 56
expresion            : 32 34 35 49 67 71 73
f                    : 22
factor               : 41
funcion              : 6
g                    : 31
h                    : 33 35
i                    : 36
j                    : 37
k                    : 41
l                    : 42
m                    : 46
n                    : 47
o                    : 50
p                    : 58
programa             : 0
q                    : 59
r                    : 67
s                    : 70
t                    : 74
termino              : 36 44 45
tipo                 : 22 74 79 80
u                    : 78 80
varcte               : 48
variable             : 4

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM createProcDir ID addProcDir SEMICOLON a b bloque END

    PROGRAM         shift and go to state 1

    programa                       shift and go to state 2

state 1

    (1) programa -> PROGRAM . createProcDir ID addProcDir SEMICOLON a b bloque END
    (2) createProcDir -> .

    ID              reduce using rule 2 (createProcDir -> .)

    createProcDir                  shift and go to state 3

state 2

    (0) S' -> programa .



state 3

    (1) programa -> PROGRAM createProcDir . ID addProcDir SEMICOLON a b bloque END

    ID              shift and go to state 4


state 4

    (1) programa -> PROGRAM createProcDir ID . addProcDir SEMICOLON a b bloque END
    (3) addProcDir -> .

    SEMICOLON       reduce using rule 3 (addProcDir -> .)

    addProcDir                     shift and go to state 5

state 5

    (1) programa -> PROGRAM createProcDir ID addProcDir . SEMICOLON a b bloque END

    SEMICOLON       shift and go to state 6


state 6

    (1) programa -> PROGRAM createProcDir ID addProcDir SEMICOLON . a b bloque END
    (4) a -> . variable
    (5) a -> .
    (20) variable -> . VAR createVarDir d

    INTTYPE         reduce using rule 5 (a -> .)
    FLOATTYPE       reduce using rule 5 (a -> .)
    CHARTYPE        reduce using rule 5 (a -> .)
    BOOLTYPE        reduce using rule 5 (a -> .)
    STRINGTYPE      reduce using rule 5 (a -> .)
    LCURLY          reduce using rule 5 (a -> .)
    VAR             shift and go to state 8

    a                              shift and go to state 7
    variable                       shift and go to state 9

state 7

    (1) programa -> PROGRAM createProcDir ID addProcDir SEMICOLON a . b bloque END
    (6) b -> . funcion b
    (7) b -> .
    (74) funcion -> . tipo FUNC ID addProcDirFunc LPARENTHESIS t RPARENTHESIS bloque
    (11) tipo -> . INTTYPE
    (12) tipo -> . FLOATTYPE
    (13) tipo -> . CHARTYPE
    (14) tipo -> . BOOLTYPE
    (15) tipo -> . STRINGTYPE

    LCURLY          reduce using rule 7 (b -> .)
    INTTYPE         shift and go to state 16
    FLOATTYPE       shift and go to state 13
    CHARTYPE        shift and go to state 14
    BOOLTYPE        shift and go to state 10
    STRINGTYPE      shift and go to state 15

    b                              shift and go to state 11
    tipo                           shift and go to state 12
    funcion                        shift and go to state 17

state 8

    (20) variable -> VAR . createVarDir d
    (21) createVarDir -> .

    ID              reduce using rule 21 (createVarDir -> .)

    createVarDir                   shift and go to state 18

state 9

    (4) a -> variable .

    INTTYPE         reduce using rule 4 (a -> variable .)
    FLOATTYPE       reduce using rule 4 (a -> variable .)
    CHARTYPE        reduce using rule 4 (a -> variable .)
    BOOLTYPE        reduce using rule 4 (a -> variable .)
    STRINGTYPE      reduce using rule 4 (a -> variable .)
    LCURLY          reduce using rule 4 (a -> variable .)


state 10

    (14) tipo -> BOOLTYPE .

    COMA            reduce using rule 14 (tipo -> BOOLTYPE .)
    RPARENTHESIS    reduce using rule 14 (tipo -> BOOLTYPE .)
    FUNC            reduce using rule 14 (tipo -> BOOLTYPE .)
    SEMICOLON       reduce using rule 14 (tipo -> BOOLTYPE .)


state 11

    (1) programa -> PROGRAM createProcDir ID addProcDir SEMICOLON a b . bloque END
    (8) bloque -> . LCURLY c RCURLY

    LCURLY          shift and go to state 19

    bloque                         shift and go to state 20

state 12

    (74) funcion -> tipo . FUNC ID addProcDirFunc LPARENTHESIS t RPARENTHESIS bloque

    FUNC            shift and go to state 21


state 13

    (12) tipo -> FLOATTYPE .

    COMA            reduce using rule 12 (tipo -> FLOATTYPE .)
    RPARENTHESIS    reduce using rule 12 (tipo -> FLOATTYPE .)
    FUNC            reduce using rule 12 (tipo -> FLOATTYPE .)
    SEMICOLON       reduce using rule 12 (tipo -> FLOATTYPE .)


state 14

    (13) tipo -> CHARTYPE .

    COMA            reduce using rule 13 (tipo -> CHARTYPE .)
    RPARENTHESIS    reduce using rule 13 (tipo -> CHARTYPE .)
    FUNC            reduce using rule 13 (tipo -> CHARTYPE .)
    SEMICOLON       reduce using rule 13 (tipo -> CHARTYPE .)


state 15

    (15) tipo -> STRINGTYPE .

    COMA            reduce using rule 15 (tipo -> STRINGTYPE .)
    RPARENTHESIS    reduce using rule 15 (tipo -> STRINGTYPE .)
    FUNC            reduce using rule 15 (tipo -> STRINGTYPE .)
    SEMICOLON       reduce using rule 15 (tipo -> STRINGTYPE .)


state 16

    (11) tipo -> INTTYPE .

    COMA            reduce using rule 11 (tipo -> INTTYPE .)
    RPARENTHESIS    reduce using rule 11 (tipo -> INTTYPE .)
    FUNC            reduce using rule 11 (tipo -> INTTYPE .)
    SEMICOLON       reduce using rule 11 (tipo -> INTTYPE .)


state 17

    (6) b -> funcion . b
    (6) b -> . funcion b
    (7) b -> .
    (74) funcion -> . tipo FUNC ID addProcDirFunc LPARENTHESIS t RPARENTHESIS bloque
    (11) tipo -> . INTTYPE
    (12) tipo -> . FLOATTYPE
    (13) tipo -> . CHARTYPE
    (14) tipo -> . BOOLTYPE
    (15) tipo -> . STRINGTYPE

    LCURLY          reduce using rule 7 (b -> .)
    INTTYPE         shift and go to state 16
    FLOATTYPE       shift and go to state 13
    CHARTYPE        shift and go to state 14
    BOOLTYPE        shift and go to state 10
    STRINGTYPE      shift and go to state 15

    b                              shift and go to state 22
    tipo                           shift and go to state 12
    funcion                        shift and go to state 17

state 18

    (20) variable -> VAR createVarDir . d
    (22) d -> . e COLON tipo addType SEMICOLON f
    (24) e -> . ID addVarDir
    (25) e -> . ID addVarDir LBRACKET RBRACKET COMA e
    (26) e -> . ID addVarDir LBRACKET RBRACKET
    (27) e -> . ID addVarDir COMA e

    ID              shift and go to state 25

    e                              shift and go to state 23
    d                              shift and go to state 24

state 19

    (8) bloque -> LCURLY . c RCURLY
    (9) c -> . estatuto c
    (10) c -> .
    (16) estatuto -> . asignacion
    (17) estatuto -> . condicion
    (18) estatuto -> . escritura
    (19) estatuto -> . ciclo
    (31) asignacion -> . ID g
    (67) condicion -> . IF LPARENTHESIS expresion RPARENTHESIS bloque r
    (70) escritura -> . PRINT LPARENTHESIS s RPARENTHESIS SEMICOLON
    (73) ciclo -> . WHILE LPARENTHESIS expresion RPARENTHESIS bloque

    RCURLY          reduce using rule 10 (c -> .)
    ID              shift and go to state 34
    IF              shift and go to state 33
    PRINT           shift and go to state 32
    WHILE           shift and go to state 30

    c                              shift and go to state 26
    ciclo                          shift and go to state 27
    asignacion                     shift and go to state 28
    estatuto                       shift and go to state 29
    condicion                      shift and go to state 31
    escritura                      shift and go to state 35

state 20

    (1) programa -> PROGRAM createProcDir ID addProcDir SEMICOLON a b bloque . END

    END             shift and go to state 36


state 21

    (74) funcion -> tipo FUNC . ID addProcDirFunc LPARENTHESIS t RPARENTHESIS bloque

    ID              shift and go to state 37


state 22

    (6) b -> funcion b .

    LCURLY          reduce using rule 6 (b -> funcion b .)


state 23

    (22) d -> e . COLON tipo addType SEMICOLON f

    COLON           shift and go to state 38


state 24

    (20) variable -> VAR createVarDir d .

    INTTYPE         reduce using rule 20 (variable -> VAR createVarDir d .)
    FLOATTYPE       reduce using rule 20 (variable -> VAR createVarDir d .)
    CHARTYPE        reduce using rule 20 (variable -> VAR createVarDir d .)
    BOOLTYPE        reduce using rule 20 (variable -> VAR createVarDir d .)
    STRINGTYPE      reduce using rule 20 (variable -> VAR createVarDir d .)
    LCURLY          reduce using rule 20 (variable -> VAR createVarDir d .)


state 25

    (24) e -> ID . addVarDir
    (25) e -> ID . addVarDir LBRACKET RBRACKET COMA e
    (26) e -> ID . addVarDir LBRACKET RBRACKET
    (27) e -> ID . addVarDir COMA e
    (28) addVarDir -> .

    LBRACKET        reduce using rule 28 (addVarDir -> .)
    COMA            reduce using rule 28 (addVarDir -> .)
    COLON           reduce using rule 28 (addVarDir -> .)

    addVarDir                      shift and go to state 39

state 26

    (8) bloque -> LCURLY c . RCURLY

    RCURLY          shift and go to state 40


state 27

    (19) estatuto -> ciclo .

    ID              reduce using rule 19 (estatuto -> ciclo .)
    IF              reduce using rule 19 (estatuto -> ciclo .)
    PRINT           reduce using rule 19 (estatuto -> ciclo .)
    WHILE           reduce using rule 19 (estatuto -> ciclo .)
    RCURLY          reduce using rule 19 (estatuto -> ciclo .)


state 28

    (16) estatuto -> asignacion .

    ID              reduce using rule 16 (estatuto -> asignacion .)
    IF              reduce using rule 16 (estatuto -> asignacion .)
    PRINT           reduce using rule 16 (estatuto -> asignacion .)
    WHILE           reduce using rule 16 (estatuto -> asignacion .)
    RCURLY          reduce using rule 16 (estatuto -> asignacion .)


state 29

    (9) c -> estatuto . c
    (9) c -> . estatuto c
    (10) c -> .
    (16) estatuto -> . asignacion
    (17) estatuto -> . condicion
    (18) estatuto -> . escritura
    (19) estatuto -> . ciclo
    (31) asignacion -> . ID g
    (67) condicion -> . IF LPARENTHESIS expresion RPARENTHESIS bloque r
    (70) escritura -> . PRINT LPARENTHESIS s RPARENTHESIS SEMICOLON
    (73) ciclo -> . WHILE LPARENTHESIS expresion RPARENTHESIS bloque

    RCURLY          reduce using rule 10 (c -> .)
    ID              shift and go to state 34
    IF              shift and go to state 33
    PRINT           shift and go to state 32
    WHILE           shift and go to state 30

    c                              shift and go to state 41
    ciclo                          shift and go to state 27
    asignacion                     shift and go to state 28
    estatuto                       shift and go to state 29
    condicion                      shift and go to state 31
    escritura                      shift and go to state 35

state 30

    (73) ciclo -> WHILE . LPARENTHESIS expresion RPARENTHESIS bloque

    LPARENTHESIS    shift and go to state 42


state 31

    (17) estatuto -> condicion .

    ID              reduce using rule 17 (estatuto -> condicion .)
    IF              reduce using rule 17 (estatuto -> condicion .)
    PRINT           reduce using rule 17 (estatuto -> condicion .)
    WHILE           reduce using rule 17 (estatuto -> condicion .)
    RCURLY          reduce using rule 17 (estatuto -> condicion .)


state 32

    (70) escritura -> PRINT . LPARENTHESIS s RPARENTHESIS SEMICOLON

    LPARENTHESIS    shift and go to state 43


state 33

    (67) condicion -> IF . LPARENTHESIS expresion RPARENTHESIS bloque r

    LPARENTHESIS    shift and go to state 44


state 34

    (31) asignacion -> ID . g
    (32) g -> . ASSIGN expresion SEMICOLON
    (33) g -> . LBRACKET RBRACKET ASSIGN LBRACKET h RBRACKET SEMICOLON

    ASSIGN          shift and go to state 46
    LBRACKET        shift and go to state 47

    g                              shift and go to state 45

state 35

    (18) estatuto -> escritura .

    ID              reduce using rule 18 (estatuto -> escritura .)
    IF              reduce using rule 18 (estatuto -> escritura .)
    PRINT           reduce using rule 18 (estatuto -> escritura .)
    WHILE           reduce using rule 18 (estatuto -> escritura .)
    RCURLY          reduce using rule 18 (estatuto -> escritura .)


state 36

    (1) programa -> PROGRAM createProcDir ID addProcDir SEMICOLON a b bloque END .

    $end            reduce using rule 1 (programa -> PROGRAM createProcDir ID addProcDir SEMICOLON a b bloque END .)


state 37

    (74) funcion -> tipo FUNC ID . addProcDirFunc LPARENTHESIS t RPARENTHESIS bloque
    (75) addProcDirFunc -> .

    LPARENTHESIS    reduce using rule 75 (addProcDirFunc -> .)

    addProcDirFunc                 shift and go to state 48

state 38

    (22) d -> e COLON . tipo addType SEMICOLON f
    (11) tipo -> . INTTYPE
    (12) tipo -> . FLOATTYPE
    (13) tipo -> . CHARTYPE
    (14) tipo -> . BOOLTYPE
    (15) tipo -> . STRINGTYPE

    INTTYPE         shift and go to state 16
    FLOATTYPE       shift and go to state 13
    CHARTYPE        shift and go to state 14
    BOOLTYPE        shift and go to state 10
    STRINGTYPE      shift and go to state 15

    tipo                           shift and go to state 49

state 39

    (24) e -> ID addVarDir .
    (25) e -> ID addVarDir . LBRACKET RBRACKET COMA e
    (26) e -> ID addVarDir . LBRACKET RBRACKET
    (27) e -> ID addVarDir . COMA e

    COLON           reduce using rule 24 (e -> ID addVarDir .)
    LBRACKET        shift and go to state 50
    COMA            shift and go to state 51


state 40

    (8) bloque -> LCURLY c RCURLY .

    ID              reduce using rule 8 (bloque -> LCURLY c RCURLY .)
    IF              reduce using rule 8 (bloque -> LCURLY c RCURLY .)
    PRINT           reduce using rule 8 (bloque -> LCURLY c RCURLY .)
    WHILE           reduce using rule 8 (bloque -> LCURLY c RCURLY .)
    RCURLY          reduce using rule 8 (bloque -> LCURLY c RCURLY .)
    END             reduce using rule 8 (bloque -> LCURLY c RCURLY .)
    ELSE            reduce using rule 8 (bloque -> LCURLY c RCURLY .)
    INTTYPE         reduce using rule 8 (bloque -> LCURLY c RCURLY .)
    FLOATTYPE       reduce using rule 8 (bloque -> LCURLY c RCURLY .)
    CHARTYPE        reduce using rule 8 (bloque -> LCURLY c RCURLY .)
    BOOLTYPE        reduce using rule 8 (bloque -> LCURLY c RCURLY .)
    STRINGTYPE      reduce using rule 8 (bloque -> LCURLY c RCURLY .)
    LCURLY          reduce using rule 8 (bloque -> LCURLY c RCURLY .)


state 41

    (9) c -> estatuto c .

    RCURLY          reduce using rule 9 (c -> estatuto c .)


state 42

    (73) ciclo -> WHILE LPARENTHESIS . expresion RPARENTHESIS bloque
    (50) expresion -> . exp o
    (36) exp -> . termino i
    (41) termino -> . factor k
    (46) factor -> . m
    (47) factor -> . n
    (48) m -> . varcte
    (49) n -> . LPARENTHESIS expresion RPARENTHESIS
    (58) varcte -> . p
    (59) p -> . ID q
    (60) p -> . INT
    (61) p -> . FLOAT
    (62) p -> . CHAR
    (63) p -> . STRING
    (64) p -> . BOOL

    LPARENTHESIS    shift and go to state 57
    ID              shift and go to state 58
    INT             shift and go to state 66
    FLOAT           shift and go to state 60
    CHAR            shift and go to state 52
    STRING          shift and go to state 56
    BOOL            shift and go to state 64

    expresion                      shift and go to state 59
    varcte                         shift and go to state 54
    m                              shift and go to state 61
    n                              shift and go to state 62
    p                              shift and go to state 63
    termino                        shift and go to state 53
    exp                            shift and go to state 65
    factor                         shift and go to state 55

state 43

    (70) escritura -> PRINT LPARENTHESIS . s RPARENTHESIS SEMICOLON
    (71) s -> . expresion
    (72) s -> . QUOTE CTESTRING QUOTE
    (50) expresion -> . exp o
    (36) exp -> . termino i
    (41) termino -> . factor k
    (46) factor -> . m
    (47) factor -> . n
    (48) m -> . varcte
    (49) n -> . LPARENTHESIS expresion RPARENTHESIS
    (58) varcte -> . p
    (59) p -> . ID q
    (60) p -> . INT
    (61) p -> . FLOAT
    (62) p -> . CHAR
    (63) p -> . STRING
    (64) p -> . BOOL

    QUOTE           shift and go to state 67
    LPARENTHESIS    shift and go to state 57
    ID              shift and go to state 58
    INT             shift and go to state 66
    FLOAT           shift and go to state 60
    CHAR            shift and go to state 52
    STRING          shift and go to state 56
    BOOL            shift and go to state 64

    expresion                      shift and go to state 68
    varcte                         shift and go to state 54
    m                              shift and go to state 61
    n                              shift and go to state 62
    p                              shift and go to state 63
    s                              shift and go to state 69
    termino                        shift and go to state 53
    exp                            shift and go to state 65
    factor                         shift and go to state 55

state 44

    (67) condicion -> IF LPARENTHESIS . expresion RPARENTHESIS bloque r
    (50) expresion -> . exp o
    (36) exp -> . termino i
    (41) termino -> . factor k
    (46) factor -> . m
    (47) factor -> . n
    (48) m -> . varcte
    (49) n -> . LPARENTHESIS expresion RPARENTHESIS
    (58) varcte -> . p
    (59) p -> . ID q
    (60) p -> . INT
    (61) p -> . FLOAT
    (62) p -> . CHAR
    (63) p -> . STRING
    (64) p -> . BOOL

    LPARENTHESIS    shift and go to state 57
    ID              shift and go to state 58
    INT             shift and go to state 66
    FLOAT           shift and go to state 60
    CHAR            shift and go to state 52
    STRING          shift and go to state 56
    BOOL            shift and go to state 64

    expresion                      shift and go to state 70
    varcte                         shift and go to state 54
    m                              shift and go to state 61
    n                              shift and go to state 62
    p                              shift and go to state 63
    termino                        shift and go to state 53
    exp                            shift and go to state 65
    factor                         shift and go to state 55

state 45

    (31) asignacion -> ID g .

    ID              reduce using rule 31 (asignacion -> ID g .)
    IF              reduce using rule 31 (asignacion -> ID g .)
    PRINT           reduce using rule 31 (asignacion -> ID g .)
    WHILE           reduce using rule 31 (asignacion -> ID g .)
    RCURLY          reduce using rule 31 (asignacion -> ID g .)


state 46

    (32) g -> ASSIGN . expresion SEMICOLON
    (50) expresion -> . exp o
    (36) exp -> . termino i
    (41) termino -> . factor k
    (46) factor -> . m
    (47) factor -> . n
    (48) m -> . varcte
    (49) n -> . LPARENTHESIS expresion RPARENTHESIS
    (58) varcte -> . p
    (59) p -> . ID q
    (60) p -> . INT
    (61) p -> . FLOAT
    (62) p -> . CHAR
    (63) p -> . STRING
    (64) p -> . BOOL

    LPARENTHESIS    shift and go to state 57
    ID              shift and go to state 58
    INT             shift and go to state 66
    FLOAT           shift and go to state 60
    CHAR            shift and go to state 52
    STRING          shift and go to state 56
    BOOL            shift and go to state 64

    expresion                      shift and go to state 71
    varcte                         shift and go to state 54
    m                              shift and go to state 61
    n                              shift and go to state 62
    p                              shift and go to state 63
    termino                        shift and go to state 53
    exp                            shift and go to state 65
    factor                         shift and go to state 55

state 47

    (33) g -> LBRACKET . RBRACKET ASSIGN LBRACKET h RBRACKET SEMICOLON

    RBRACKET        shift and go to state 72


state 48

    (74) funcion -> tipo FUNC ID addProcDirFunc . LPARENTHESIS t RPARENTHESIS bloque

    LPARENTHESIS    shift and go to state 73


state 49

    (22) d -> e COLON tipo . addType SEMICOLON f
    (23) addType -> .

    SEMICOLON       reduce using rule 23 (addType -> .)

    addType                        shift and go to state 74

state 50

    (25) e -> ID addVarDir LBRACKET . RBRACKET COMA e
    (26) e -> ID addVarDir LBRACKET . RBRACKET

    RBRACKET        shift and go to state 75


state 51

    (27) e -> ID addVarDir COMA . e
    (24) e -> . ID addVarDir
    (25) e -> . ID addVarDir LBRACKET RBRACKET COMA e
    (26) e -> . ID addVarDir LBRACKET RBRACKET
    (27) e -> . ID addVarDir COMA e

    ID              shift and go to state 25

    e                              shift and go to state 76

state 52

    (62) p -> CHAR .

    MULTIPLICATION  reduce using rule 62 (p -> CHAR .)
    DIVISION        reduce using rule 62 (p -> CHAR .)
    ADDITION        reduce using rule 62 (p -> CHAR .)
    SUBTRACTION     reduce using rule 62 (p -> CHAR .)
    LESS            reduce using rule 62 (p -> CHAR .)
    GREATER         reduce using rule 62 (p -> CHAR .)
    LESSEQUAL       reduce using rule 62 (p -> CHAR .)
    GREATEREQUAL    reduce using rule 62 (p -> CHAR .)
    NOTEQUAL        reduce using rule 62 (p -> CHAR .)
    EQUAL           reduce using rule 62 (p -> CHAR .)
    SEMICOLON       reduce using rule 62 (p -> CHAR .)
    RPARENTHESIS    reduce using rule 62 (p -> CHAR .)
    COMA            reduce using rule 62 (p -> CHAR .)
    RBRACKET        reduce using rule 62 (p -> CHAR .)


state 53

    (36) exp -> termino . i
    (37) i -> . j
    (38) i -> .
    (39) j -> . ADDITION exp
    (40) j -> . SUBTRACTION exp

    LESS            reduce using rule 38 (i -> .)
    GREATER         reduce using rule 38 (i -> .)
    LESSEQUAL       reduce using rule 38 (i -> .)
    GREATEREQUAL    reduce using rule 38 (i -> .)
    NOTEQUAL        reduce using rule 38 (i -> .)
    EQUAL           reduce using rule 38 (i -> .)
    RPARENTHESIS    reduce using rule 38 (i -> .)
    SEMICOLON       reduce using rule 38 (i -> .)
    COMA            reduce using rule 38 (i -> .)
    RBRACKET        reduce using rule 38 (i -> .)
    ADDITION        shift and go to state 79
    SUBTRACTION     shift and go to state 80

    i                              shift and go to state 77
    j                              shift and go to state 78

state 54

    (48) m -> varcte .
